--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "analyze": "npx hackmyresume analyze resume.json",
     "start": "resume serve -t ./node_modules/jsonresume-theme-macchiato",
+    "html": "resume export index.html -t ./node_modules/jsonresume-theme-macchiato -f html",
+    "pdf": "resume export resume.pdf -t ./node_modules/jsonresume-theme-macchiato -f pdf",
+    "all": "npm run html && npm run pdf",
     "postinstall": "patch-package"
   },
   "repository": {
@@ -20,7 +22,6 @@
   },
   "homepage": "https://github.com/davidmartinez10/curriculum-vitae#readme",
   "dependencies": {
-    "hackmyresume": "^1.9.0-beta",
     "jsonresume-theme-macchiato": "^1.1.0",
     "patch-package": "^6.5.1",
     "resume-cli": "^3.0.8"
